--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eslint-plugin-cypress": "^2.8.1",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-node": "^10.0.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "mockingoose": "^2.15.2"
   },
   "nodemonConfig": {
     "ext": "js,hbs"
