--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "node": ">=18.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "hbs": "^4.1.0",
@@ -29,7 +31,10 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.15",
+    "sharp": "^0.31.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "cypress": "^9.5.1",
