--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
     "sharp": "^0.31.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "cypress": "^9.5.1",
