--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "node": ">=18.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "gridfs-stream": "^1.1.1",
     "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
@@ -28,6 +30,8 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
