--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "gridfs-stream": "^1.1.1",
@@ -28,7 +29,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongodb": "^3.4.1",
-    "mongoose": "^5.8.11",
+    "mongoose": "^5.13.15",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
