--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=18.1.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
