--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "node": ">=18.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "handlebars-dateformat": "^1.1.3",
@@ -28,6 +30,7 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
