--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:test": "PORT=3030 MONGODB_URL='mongodb://0.0.0.0/acebook_test' npm start",
     "test": "npm run lint && npm run test:unit && npm run test:integration",
     "test:unit": "jest",
-    "test:integration": "cypress run",
+    "test:integration": "cypress run"
     },
 
   "engines": {
