--- a/package.json
+++ b/package.json
@@ -38,5 +38,16 @@
   },
   "nodemonConfig": {
     "ext": "js,hbs"
-  }
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PDyson1400/acebook-node-template.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/PDyson1400/acebook-node-template/issues"
+  },
+  "homepage": "https://github.com/PDyson1400/acebook-node-template#readme"
 }
