--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
+    "node": "^19.6.0",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
