--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -10,19 +10,19 @@ jobs:
           build: npm run build
 
 
-#      # Install NPM dependencies, cache them correctly
-#      # and run all Cypress tests
-#      - name: Create mongoDB Docker container
-#        run: sudo docker run -d -p 27017:27017 mongo:latest
-#      - name: start server
-#        uses: cypress-io/github-action@v4.1.0 # use the explicit version number
-#        with:
-#          wait-on: "http://localhost:8888"
-#          config-file: cypress.config.cjs
-#          # build: npm run build
-#          start: netlify dev
-#        env:
-#          MONGODB_URI: "mongodb://0.0.0.0:27017/"
-#          MONGODB_DATABASE: "gladiators"
-#      - name: run cypress component test
-#        run: npx cypress run --component
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Create mongoDB Docker container
+        run: sudo docker run -d -p 27017:27017 mongo:latest
+      - name: start server
+        uses: cypress-io/github-action@v4.1.0 # use the explicit version number
+        with:
+          wait-on: "http://localhost:3030"
+          config-file: cypress.config.cjs
+          # build: npm run build
+          start: netlify dev
+        env:
+          MONGODB_URI: "mongodb://0.0.0.0:27017/"
+          MONGODB_DATABASE: "acebook_test"
+      - name: run cypress component test
+        run: npm run test:unit
