--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -20,7 +20,7 @@ jobs:
           wait-on: "http://localhost:3030"
           config-file: cypress.config.cjs
           # build: npm run build
-          start: netlify dev
+          start: npm run start:test
         env:
           MONGODB_URI: "mongodb://0.0.0.0:27017/"
           MONGODB_DATABASE: "acebook_test"
