--- a/.github/workflows/cypress_test.yml
+++ b/.github/workflows/cypress_test.yml
@@ -10,5 +10,11 @@ jobs:
      - name: Run Cypress Test
        uses: cypress-io/github-action@v4
        with:
+        node-version: ${{ matrix.node-version }}
+     - name: Start MongoDB
+       uses: supercharge/mongodb-github-action@1.7.0
+       with:
+        mongodb-version: ${{ matrix.mongodb-version }}
+       with:
          command: npm run test:integration
          browser: chrome
