--- a/.github/workflows/cypress_test.yml
+++ b/.github/workflows/cypress_test.yml
@@ -1,21 +1,3 @@
-# name: Cypress Tests
-# on: [push]
-# jobs:
-#  Cypress-Test:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout GitCode
-#        uses: actions/checkout@v2
-#      - name: Install and run MongoDB  
-#        uses: docker://mongo   
-#        with:   
-#         args: --name my-mongo-instance -p 27017:27017
-#      - name: Install dependencies   
-#        run: npm install   
-#      - name: Run Tests   
-#        run: npx cypress run
-      
-       
 name: Cypress Tests
 
 on: [push]
@@ -26,46 +8,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v5 # use the explicit version number
         with:
           build: npm run build
-          start: npm start
-    
-
-
-
-  
-
-
-
-# name: Cypress Tests
-
-# on: [push]
-
-# jobs:
-#   cypress-run:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-#         with:
-#           build: npm run build
-#       # Install NPM dependencies, cache them correctly
-#       # and run all Cypress tests
-#       - name: Create mongoDB Docker container      
-#         run: sudo docker run -d -p 27017:27017 mongo:latest
-#       - name: start server
-#         uses: cypress-io/github-action@v4.1.0 # use the explicit version number
-#         with:
-#           wait-on: "http://localhost:8888"
-#           config-file: cypress.config.cjs
-#           # build: npm run build
-#           start: netlify dev
-#         env:
-#           MONGODB_URI: "mongodb://0.0.0.0:27017/"
-#           MONGODB_DATABASE: "gladiators"
-#       - name: run cypress component test
-#         run: npx cypress run --component
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Create mongoDB Docker container      
+        run: sudo docker run -d -p 27017:27017 mongo:latest
+      - name: start server
+        uses: cypress-io/github-action@v4.1.0 # use the explicit version number
+        with:
+          wait-on: "http://localhost:3030"
+          config-file: cypress.config.cjs
+          # build: npm run build
+          start: npm run start:test
+        env:
+          MONGODB_URI: "mongodb://0.0.0.0:27017/"
+          MONGODB_DATABASE: "acebook_test"
+      - name: run cypress component test
+        run: npm run test:unit
