--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -9,10 +9,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          build: npm run build
+          build: npm install
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Create mongoDB Docker container      
+      - name: Create mongoDB Docker container
         run: sudo docker run -d -p 27017:27017 mongo:latest
       - name: start server
         uses: cypress-io/github-action@v4.1.0 # use the explicit version number
