--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
       "jest",
       "node"
     ],
-    "rules": {
-    }
+        "rules": {
+          "node/no-unpublished-require": ["error", {"allowModules": ["cypress"]}]
+        }
 }
