--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "nodemon ./bin/www",
     "start:test": "PORT=3030 MONGODB_URL='mongodb://0.0.0.0/acebook_test' npm start",
-    "test": "npm run lint && npm run test:unit && npm run test:integration",
+    "test": "npm run test:unit && npm run test:integration",
     "test:unit": "jest",
     "test:integration": "cypress run"
   },
@@ -29,11 +29,12 @@
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
-    "cypress": "^9.5.1",
+    "cypress": "^12.14.0",
     "eslint": "^8.10.0",
-    "eslint-plugin-cypress": "^2.8.1",
+    "eslint-plugin-cypress": "^12.14.0",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^27.5.1"
   },
   "nodemonConfig": {
