--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.2",
     "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
+    "lint": "^0.8.19",
     "method-override": "^3.0.0",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
@@ -30,10 +31,11 @@
   },
   "devDependencies": {
     "cypress": "^9.5.1",
-    "eslint": "^8.10.0",
+    "eslint": "^8.42.0",
     "eslint-plugin-cypress": "^2.8.1",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^27.5.1"
   },
   "nodemonConfig": {
