--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,12 @@ jobs:
         run: npm install
 
       - name: Run unit tests
-        run: npm run test:unit 
-        env:
-          CI: true
+        run: npm run test:unit
+
+      - name: Start test server
+        run: npm run start:test &
+
+      - name: Run all Cypress tests
+        uses: cypress-io/github-action@v5
+        with:
+          start: npm start
