--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=18.1.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -27,7 +28,8 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "cypress": "^12.14.0",
