Migrate Cypress from v9 to v12

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,8 @@
       "node"
     ],
     "rules": {
+      "node/no-unpublished-require": ["error", {
+        "allowModules": ["cypress"]
+      }]
     }
 }
