--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-react": "^7.32.2",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "sinon": "^15.1.2"
   },
   "nodemonConfig": {
     "ext": "js,hbs"
