--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "chance": "1.1.11"
   },
   "devDependencies": {
     "cypress": "^9.5.1",
