--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,6 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           start: npm start
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
