added input sanitization and tests

--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dompurify": "^3.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.2",
     "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
+    "jsdom": "^22.1.0",
     "lint": "^0.8.19",
     "method-override": "^3.0.0",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sanitize-html": "^2.10.0",
+    "supertest": "^6.3.3",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "cypress": "^9.5.1",
