--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "jest",
     "test:integration": "cypress run",
-    "seed": "node ./seeds/cypress.js"
+    "seed": "node ./seeds/cypress.js",
+    "dropdb": "node dropDatabase.js"
   },
   "engines": {
     "node": ">=18.1.0"
