--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "chance": "1.1.11",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dompurify": "^3.0.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.2",
+    "express-session": "^1.17.3",
     "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
     "jsdom": "^22.1.0",
@@ -33,8 +34,7 @@
     "nodemon": "^2.0.15",
     "sanitize-html": "^2.10.0",
     "supertest": "^6.3.3",
-    "validator": "^13.9.0",
-    "chance": "1.1.11"
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "cypress": "^9.5.1",
