--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start:test": "PORT=3030 MONGODB_URL='mongodb://0.0.0.0/acebook_test' npm start",
     "test": "npm run lint && npm run test:unit && npm run test:integration",
     "test:unit": "jest",
-    "test:integration": "cypress run"
+    "test:integration": "cypress run",
+    "test:e2e": "jest ./test/selenium.test.js"
   },
   "engines": {
     "node": ">=18.1.0"
@@ -43,7 +44,9 @@
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "geckodriver": "^4.0.4",
     "jest": "^27.5.1",
+    "selenium-webdriver": "^4.10.0",
     "sinon": "^15.1.2"
   },
   "nodemonConfig": {
