--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "start": "nodemon ./bin/www",
     "start:test": "PORT=3030 MONGODB_URL='mongodb://0.0.0.0/acebook_test' npm start",
     "test": "npm run lint && npm run test:unit && npm run test:integration",
-    "test:unit": "jest",
-    "test:integration": "cypress run",
-    "test:e2e": "jest ./test/selenium.test.js"
+    "test:e2e": "jest ./test/selenium.test.js",
+    "test:all": "npm run test && npm run test:e2e"
   },
   "engines": {
     "node": ">=18.1.0"
