--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependencies
         run: npm install
         
+      - name: Run tests
+        run: npm run test
+        
       - name: Start test server
         run: npm run start:test &
 
@@ -40,8 +43,6 @@ jobs:
           record: true
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-# Commented out these tests as test:unit runs both unit tests and selenium tests which currently dont work on git actions
-#       - name: Run unit tests
-#         run: npm run test:unit
+
 
 
