--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Install dependencies
         run: npm install
         
-      - name: Run tests
-        run: npm run test
+#       - name: Run tests
+#         run: npm run test
         
       - name: Start test server
         run: npm run start:test &
