--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,10 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        
-#       - name: Run tests
-#         run: npm run test
-        
+
+      - name: Run tests
+        run: npm run test
+
       - name: Start test server
         run: npm run start:test &
 
@@ -43,6 +43,3 @@ jobs:
           record: true
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-
-
-
