--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "start:test": "PORT=3030 MONGODB_URL='mongodb://0.0.0.0/acebook_test' npm start",
     "test": "npm run lint && npm run test:unit && npm run test:integration",
     "test:unit": "jest",
-    "test:integration": "cypress run"
+    "test:integration": "cypress run",
+    "test:homepage": "cypress run --spec 'cypress/integration/homepage/*'",
+    "test:login_and_out": "cypress run --spec 'cypress/integration/login_and_out/*'",
+    "test:posts": "cypress run --spec 'cypress/integration/posts/*'",
+    "test:sign_up": "cypress run --spec 'cypress/integration/sign_up/*'",
+    "test:entry_point": "cypress run --spec 'cypress/integration/entry_point/*'"
   },
   "engines": {
     "node": ">=18.1.0"
