--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "cypress": "^9.5.1",
+    "cypress-failed-log": "^2.10.0",
     "eslint": "^8.10.0",
     "eslint-plugin-cypress": "^2.8.1",
     "eslint-plugin-jest": "^22.21.0",
