--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.2.0",
     "express": "^4.18.2",
     "express-session": "^1.17.2",
     "hbs": "^4.1.0",
