--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.22",
-    "test": "^3.3.0"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "cypress": "^9.7.0",
