--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "test": "^3.3.0"
   },
   "devDependencies": {
     "cypress": "^9.5.1",
