--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.15",
     "validator": "^13.9.0"
   },
