--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "chance": "1.1.11",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
