--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,29 @@ jobs:
       - name: Start test server
         run: npm run start:test &
 
-      - name: Run all Cypress tests on chrome
+      - name: Run all Cypress tests on Chrome
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
           start: npm start
           record: true
         env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }
+          
+      - name: Run all Cypress tests on Firefox
+        uses: cypress-io/github-action@v5
+        with:
+          browser: firefox
+          start: npm start
+          record: true
+        env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+      - name: Run all Cypress tests on Edge
+        uses: cypress-io/github-action@v5
+        with:
+          browser: edge
+          start: npm start
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }
+          
