--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,16 +41,16 @@ jobs:
         with:
           browser: chrome
           start: npm start
-          record: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+#           record: true
+#         env:
+#           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
       - name: Run all Cypress tests on Edge
         uses: cypress-io/github-action@v5
         with:
           browser: edge
           start: npm start
-          record: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+#           record: true
+#         env:
+#           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           
