--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node": ">=18.1.0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "chance": "1.1.11",
