--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "chance": "1.1.11",
+    "chromedriver": "^114.0.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dompurify": "^3.0.3",
