--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,4 +62,4 @@ jobs:
 #         if: ${{ needs.build-and-test.result == 'success' }}
 #         run: |
 #           # Send a GET request to the Render deploy hook URL
-#           curl -X GET -sS "https://api.render.com/deploy/srv-ci9e1mp8g3ne2eige8u0?key=nIJ86pXhKS8"
+#           curl -X GET -sS key goes here
