--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "start": "nodemon ./bin/www",
+    "start:app": "nodemon ./bin/www",
     "start:test": "PORT=3030 MONGODB_URL='mongodb://0.0.0.0/acebook_test' npm start",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "jest",
     "test:integration": "cypress run",
-    "seed": "node ./seeds/cypress.js",
-    "dropdb": "node dropDatabase.js"
+    "seed": "node ./seeds/index.js",
+    "dropdb": "node dropDatabase.js",
+    "start": "npm-run-all --parallel seed start:app"
   },
   "engines": {
     "node": ">=18.1.0"
@@ -46,7 +47,8 @@
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-react": "^7.32.2",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "npm-run-all": "^4.1.5"
   },
   "nodemonConfig": {
     "ext": "js,hbs"
