--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.2",
     "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
@@ -26,13 +26,15 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^3.0.1",
+    "semver": "^7.5.2",
+    "simple-update-notifier": "^2.0.0"
   },
   "devDependencies": {
-    "cypress": "^12.14.0",
+    "cypress": "^13.5.0",
     "eslint": "^8.10.0",
     "eslint-plugin-cypress": "^2.8.1",
-    "eslint-plugin-jest": "^22.21.0",
+    "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-node": "^10.0.0",
     "jest": "^27.5.1"
   },
