--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,10 @@ jobs:
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
 
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Cypress run
+      uses: cypress-io/github-action@v6
+      with:
+        build: npm run build --if-present
+        start: npm start
+        wait-on: http://localhost:3030
+
