update npm start command to start:test

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,6 +37,6 @@ jobs:
       uses: cypress-io/github-action@v6
       with:
         build: npm run build --if-present
-        start: npm start
+        start: npm start:test
         wait-on: http://localhost:3030
 
