--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI with MongoDB
+name: Node.js CI with MongoDB and cypress
 
 on:
   push:
@@ -39,4 +36,5 @@ jobs:
         build: npm run build --if-present
         start: npm run start:test
         wait-on: http://localhost:3030
+
 
