--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,12 +1,10 @@
-name: build and test
+name: Build and Test
 
 on:
   push:
-    branches: 
-      - 'main'
+    branches: ['main']
   pull_request:
-    branches: 
-      - 'main'
+    branches: ['main']
 
 jobs:
   build:
