update test workflow if statement and deploy workflow workflow_run

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   build:
-    if: github.event.pull_request.merged == false
     runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == false }}
 
     strategy:
       matrix:
