--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,13 +1,17 @@
 name: Build and Test
 
 on:
+  push: 
+    branches: ['main']
   pull_request:
     branches: ['main']
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.merged == false }}
+    if: |
+      github.event_name == 'pull_request' && github.event.action == 'opened' || 
+      (github.event_name == 'push' && github.ref == 'refs/heads/main')
 
     strategy:
       matrix:
