update if statement in test workflow

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -9,9 +9,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: |
-      github.event_name == 'pull_request' && github.event.action == 'opened' || 
-      (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    if: | 
+      github.event_name == 'pull_request' && github.event.action == 'opened' ||
+      github.event_name == 'push' && github.event.ref == 'refs/heads/main' &&
+      github.event.before == github.sha
 
     strategy:
       matrix:
