--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,13 @@
 name: Deploy
 
 on:
-    workflow_run:
-        workflows: ['Build and Test']
-        branches: [main]
-        types: [completed]
+    push:
+        branches: ['main']
 
 jobs:
     deploy:
         runs-on: ubuntu-latest
-        if: ${{ github.event.workflow_run.conclusion == 'success' }}
         steps:
-        - run: echo 'Hello Bereket and Lil'
+        - run: echo 'Hello Bereket and Lil!!!'
             
     
