change deploy workflow echo command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,6 @@ jobs:
     deploy:
         runs-on: ubuntu-latest
         steps:
-        - run: echo 'Hello Bereket & Lil!'
+        - run: echo 'Hello Bereket and Lil!'
             
     
