update deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,82 @@
 name: Deploy
 
 on:
-    push:
-        branches: ['main']
+  push:
+    branches: ["main"]
+
+env:
+  AWS_REGION: "eu-west-2"
+  BUCKET_NAME: "b-l-acebook-bucket"
+  CODEDEPLOY_APP_NAME: "b-l-acebook"
+  CODEPLOY_DEPLOYMENT_GROUP: "b-l-acebook-deploy"
 
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
-        steps:
-        - run: echo 'Hello Bereket and Lil!'
-            
-    
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Upload ZIP to S3
+        uses: NotCoffee418/s3-zip-upload@v1.3
+        env:
+          AWS_SECRET_ID: ${{ secrets.AWS_SECRET_ID }}
+          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+          BUCKET_NAME: ${{ env.BUCKET_NAME }}
+          AWS_REGION: ${{ env.AWS_REGION }}
+          SOURCE_MODE: ZIP
+          SOURCE_PATH: ./debug-override
+          DEST_FILE: debug-action.zip
+
+# env:
+#   AWS_REGION: "eu-west-2"
+#   S3_BUCKET: "b-l-acebook-bucket"
+#   CODEDEPLOY_APP_NAME: "b-l-acebook"
+#   CODEPLOY_DEPLOYMENT_GROUP: "b-l-acebook-deploy"
+
+# jobs:
+#   deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v3
+
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ env.AWS_REGION }}
+
+      # - name: Login to Amazon ECR
+      #   id: login-ecr
+      #   uses: aws-actions/amazon-ecr-login@v1
+
+      # - name: Build, tag, and push image to Amazon ECR
+      #   id: build-image
+      #   env:
+      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     IMAGE_TAG: ${{ github.sha }}
+      #   run: |
+      #     # Build a docker container and
+      #     # push it to ECR so that it can
+      #     # be deployed to ECS.
+      #     docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      #     echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+      # - name: Fill in the new image ID in the Amazon ECS task definition
+      #   id: task-def
+      #   uses: aws-actions/amazon-ecs-render-task-definition@v1
+      #   with:
+      #     task-definition: ${{ env.ECS_TASK_DEFINITION }}
+      #     container-name: ${{ env.CONTAINER_NAME }}
+      #     image: ${{ steps.build-image.outputs.image }}
+
+      # - name: Deploy Amazon ECS task definition
+      #   uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      #   with:
+      #     task-definition: ${{ steps.task-def.outputs.task-definition }}
+      #     service: ${{ env.ECS_SERVICE }}
+      #     cluster: ${{ env.ECS_CLUSTER }}
+      #     wait-for-service-stability: true
