--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,25 @@
-name: Deploy
+name: Deploy to AWS S3
 
 on:
-    push:
-        branches: ['main']
+  push:
+    branches:
+      - main
 
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
-        steps:
-        - run: echo 'Hello Bereket & Lil!'
-            
-    
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2 # Specify your AWS region
+
+      - name: Upload to S3
+        run: |
+          aws s3 sync ./your-app s3://b-l-acebook-bucket
