--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,37 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+  
+    strategy:
+      matrix:
+        node-version: [18.x]
+
     steps:
       - uses: actions/checkout@v3
-      - name: Upload ZIP to S3
-        uses: NotCoffee418/s3-zip-upload@v1.3
-        env:
-          AWS_SECRET_ID: ${{ secrets.AWS_SECRET_ID }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          BUCKET_NAME: ${{ env.BUCKET_NAME }}
-          AWS_REGION: ${{ env.AWS_REGION }}
-          SOURCE_MODE: ZIP
-          SOURCE_PATH: ./debug-override
-          DEST_FILE: debug-action.zip
+
+      - name: Set up AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Zip project
+        run: |
+          zip -r b-l-acebook-app.zip .
+
+      - name: Upload to S3
+        run: |
+          aws s3 cp b-l-acebook-app.zip s3://${{ env.BUCKET_NAME }}/{{ github.sha }}
 
 # env:
 #   AWS_REGION: "eu-west-2"
