--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Upload to S3
         run: |
-          aws s3 cp b-l-acebook-app.zip s3://${{ env.BUCKET_NAME }}/{{ github.sha }}
+          aws s3 cp b-l-acebook-app.zip s3://${{ env.BUCKET_NAME }}/
 
 # env:
 #   AWS_REGION: "eu-west-2"
