--- a/appspec.yml
+++ b/appspec.yml
@@ -2,11 +2,11 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/aws-codedeploy
+    destination: /home/ec2-user/aws-codedeploy
 permissions:
-  - object: /home/ubuntu
-    owner: ubuntu
-    group: ubuntu
+  - object: /home/ec2-user
+    owner: ec2-user
+    group: ec2-user
     type:
       - directory
       - file
@@ -14,4 +14,4 @@ hooks:
   ApplicationStart:
     - location: scripts/reload-pm2.sh
       timeout: 300
-      runas: ubuntu
+      runas: ec2-user
