update appscript user

--- a/appspec.yml
+++ b/appspec.yml
@@ -14,4 +14,4 @@ hooks:
   ApplicationStart:
     - location: scripts/reload-pm2.sh
       timeout: 300
-      runas: ubuntu
+      runas: b-l-acebook
