--- a/appspec.yml
+++ b/appspec.yml
@@ -2,11 +2,11 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/aws-codedeploy
+    destination: /home/linux/aws-codedeploy
 permissions:
-  - object: /home/ec2-user
-    owner: ec2-user
-    group: ec2-user
+  - object: /home/linux
+    owner: linux
+    group: linux
     type:
       - directory
       - file
@@ -14,4 +14,4 @@ hooks:
   ApplicationStart:
     - location: scripts/reload-pm2.sh
       timeout: 300
-      runas: b-l-acebook
+      runas: linux
