--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
   
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.1]
 
     steps:
       - uses: actions/checkout@v3
