--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,3 +44,15 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+
+name: End-to-end tests
+on: [push]
+jobs:
+  cypress-run:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v1
