--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,6 +58,6 @@ jobs:
         run: npm install
 
       - name: Start Server and Run Integration Tests
-        run: npx start-server-and-test "npm run start:test" http://localhost:3030 "npm run test:integration
+        run: npx start-server-and-test "npm run start:test" http://localhost:3030 "npm run test:integration"
       
         
