Adds step running mongodb to github action

--- a/.github/workflows/install-nvm.yml
+++ b/.github/workflows/install-nvm.yml
@@ -27,3 +27,9 @@ jobs:
         run: sudo apt-get update
       - name: install latest MongoDB
         run: sudo apt-get install -y mongodb-org
+  run-mongodb:
+    needs: [install-npm-dependencies, install-mongodb]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Start MongoDB
+        run: sudo systemctl start mongod
