--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,11 +33,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:   
+    - uses: actions/checkout@v4
     - run: npm run start:test
 
   run-tests: 
     runs-on: ubuntu-latest
     needs: build
     steps: 
+    - uses: actions/checkout@v4
     - run: sleep 10
     - run: npm run test 
